[package]
name = "json_parser"
version = "0.1.0"
edition = "2021"
description = "A JSON parser created in Rust using Pest grammar."

[dependencies]
pest = "2.1"
pest_derive = "2.1"
anyhow = "1.0"  # для обробки помилок
thiserror = "1.0"
serde_json = "1.0.132"
env_logger = "0.11.5"
log = "0.4.22"
serde_yaml = "0.9.34+deprecated"
quick-xml = { version = "0.37.0", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.3"
clap = { version = "4.5.20", features = ["cargo"] }




